<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Hospital App "</string>
    <string name="action_settings">Settings</string>
    <string name="username_edit">Enter username</string>
    <string name="password_edit">Enter password</string>
    <string name="login_button">Login</string>
    <string name="title_activity_physician_menu">PhysicianMenuActivity</string>
    <string name="search_p1">Search for patient</string>
    <string name="logout_b1">Logout</string>
    <string name="title_activity_nurse_menu">NurseMenuActivity</string>
    <string name="search_p2">Search for patient</string>
    <string name="add_patient">Add new patient</string>
    <string name="unseen_button">Show unseen patients</string>
    <string name="logout_b2">Logout</string>
    <string name="title_activity_patient_search">PatientSearchActivity</string>
    <string name="hc_search">Insert patient health card no.</string>
    <string name="search_patient">Search</string>
    <string name="title_activity_unseen_display">UnseenDisplayActivity</string>
    <string name="patient_dis">No Patients!</string>
    <string name="title_activity_new_patient">NewPatientActivity</string>
    <string name="name_edit">Insert name</string>
    <string name="num_edit">Insert health card no.</string>
    <string name="dob_edit">yyyy-mm-dd</string>
    <string name="next_button">Next</string>
    <string name="title_activity_nurse_record">NurseRecordActivity</string>
    <string name="diastolic_bp">Enter diastolic</string>
    <string name="systolic_bp">Enter systolic</string>
    <string name="temp_edit">Enter temperature</string>
    <string name="hr_edit">Enter heart rate</string>
    <string name="save_button1">Save</string>
    <string name="title_activity_physician_record">PhysicianRecordActivity</string>
    <string name="med_edit">Medications</string>
    <string name="in_edit">Instructions for medications go here</string>
    <string name="save_button2">Save</string>
    <string name="title_activity_date_time">DateTimeActivity</string>
    <string name="time_edit">Enter time seen</string>
    <string name="date_edit">Enter date seen</string>
    <string name="save_time">Save</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="pname"></string>
    <string name="phc"></string>
    <string name="pdob"></string>
    <string name="seen_but">Seen Physician?</string>
    <string name="view_recs">View Records</string>
    <string name="update_recs">New Record</string>
    <string name="title_activity_records">RecordsActivity</string>
   	<string name="dis_message">No records!</string>

</resources>
