<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NurseMenuActivity" >

    <TextView
        android:id="@+id/pname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="46dp"
        android:text="Welcome!"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/unseen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_patient"
        android:layout_below="@+id/add_patient"
        android:layout_marginTop="16dp"
        android:onClick="display_unseen"
        android:text="@string/unseen_button" />

    <Button
        android:id="@+id/add_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/search_p2"
        android:layout_marginTop="18dp"
        android:onClick="add_Patient"
        android:text="@string/add_patient" />

    <Button
        android:id="@+id/search_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pname"
        android:layout_marginTop="40dp"
        android:onClick="nurse_search"
        android:text="@string/search_p2" />

    <Button
        android:id="@+id/logout_b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:onClick="logout2"
        android:text="@string/logout_b2" />

</RelativeLayout>
