<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PhysicianRecordActivity" >

    <EditText
        android:id="@+id/in_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        android:ems="10"
        android:hint="@string/in_edit"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/med_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/in_edit"
        android:layout_alignParentTop="true"
        android:layout_marginTop="46dp"
        android:hint="@string/med_edit"
        android:ems="10" />

    <Button
        android:id="@+id/save_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="save_med"
        android:text="@string/save_button2" />

</RelativeLayout>
