<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DateTimeActivity" >

    <EditText
        android:id="@+id/time_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/time_edit"
        android:inputType="time" />

    <EditText
        android:id="@+id/date_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/time_edit"
        android:layout_below="@+id/time_edit"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/date_edit"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/save_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:onClick="time_save"
        android:text="@string/save_time" />

</RelativeLayout>
